fixing hovering on mobile devices

--- a/index.css
+++ b/index.css
@@ -68,8 +68,10 @@ h1 {
     min-height: 45px;
 }
 
-#generate-btn:hover, #change-btn:hover {
-    background-color: rgb(190, 190, 190);
+@media (hover: hover) {
+    #generate-btn:hover, #change-btn:hover {
+        background-color: rgb(190, 190, 190);
+    }
 }
 
 #results {
